--- a/myproject/helloapp/templates/hello.html
+++ b/myproject/helloapp/templates/hello.html
@@ -44,7 +44,7 @@
 <body>
 
 <div class="container">
-    <h1>Latest News</h1>
+    <h1>Latest News By Yusuf</h1>
     <div id="newsFeed">
         {% if articles %}
             {% for article in articles %}
