--- a/myproject/helloapp/templates/hello.html
+++ b/myproject/helloapp/templates/hello.html
@@ -54,15 +54,14 @@
             background-color: #0056b3;
         }
         .news-feed {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            grid-gap: 20px;
+            margin-bottom: 20px;
         }
         .article {
             background-color: #fff;
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-bottom: 10px;
         }
         .article img {
             max-width: 100%;
@@ -122,15 +121,12 @@
             <p>{{ article.description }}</p>
             <a href="{{ article.url }}" target="_blank">Read more</a>
         </div>
-        {% endfor %}
-    </div>
-
-    <div class="pagination">
-        {% if page_range %}
-        {% for i in page_range %}
-        <button class="{% if i == current_page %}active{% endif %}" onclick="changePage({{ i }})">{{ i }}</button>
-        {% endfor %}
+        {% if forloop.counter0|divisibleby:10 %}
+        <div class="pagination">
+            <button onclick="changePage({{ forloop.counter0|divisibleby:10 }})">{{ forloop.counter0|divisibleby:10 }}</button>
+        </div>
         {% endif %}
+        {% endfor %}
     </div>
 
 </div>
