--- a/myproject/helloapp/templates/hello.html
+++ b/myproject/helloapp/templates/hello.html
@@ -167,15 +167,18 @@
                     <p>{{ article.description }}</p>
                     <a href="{{ article.url }}" target="_blank">Read more</a>
                 </div>
-                {% if forloop.counter|divisibleby:10 %}
+                {% if forloop.counter0|divisibleby:10 %}
                 <div class="pagination">
                     {% if forloop.counter0 == 0 %}
                         <a class="page-link" href="?page=1">1</a>
                     {% else %}
-                        <a class="page-link" href="?page={{ forloop.counter0//10 + 1 }}">{{ forloop.counter0//10 + 1 }}</a>
+                        {% with page_num=forloop.counter0|div:10|add:1 %}
+                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                        {% endwith %}
                     {% endif %}
                 </div>
-             {% endif %}
+            {% endif %}
+            
             {% endfor %}
         {% else %}
             <p>No news articles available.</p>
