--- a/myproject/helloapp/templates/hello.html
+++ b/myproject/helloapp/templates/hello.html
@@ -172,13 +172,12 @@
                     {% if forloop.counter0 == 0 %}
                         <a class="page-link" href="?page=1">1</a>
                     {% else %}
-                        {% with page_num=forloop.counter0|div:10|add:1 %}
+                        {% with page_num=forloop.counter0 // 10 + 1 %}
                             <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
                         {% endwith %}
                     {% endif %}
                 </div>
             {% endif %}
-            
             {% endfor %}
         {% else %}
             <p>No news articles available.</p>
