--- a/myproject/helloapp/templates/hello.html
+++ b/myproject/helloapp/templates/hello.html
@@ -169,7 +169,11 @@
             </div>
             {% if forloop.counter0|divisibleby:10 %}
                 <div class="pagination">
-                    <a class="page-link" href="?page={{ forloop.counter0 // 10 + 1 }}">{{ forloop.counter0 // 10 + 1 }}</a>
+                    {% if forloop.counter0 == 0 %}
+                        <a class="page-link" href="?page=1">1</a>
+                    {% else %}
+                        <a class="page-link" href="?page={{ forloop.counter0|div:10|add:1 }}">{{ forloop.counter0|div:10|add:1 }}</a>
+                    {% endif %}
                 </div>
             {% endif %}
         {% endfor %}
